[gd_scene load_steps=5 format=3 uid="uid://0w3yj1oenqvr"]

[ext_resource type="Script" path="res://Level1.gd" id="1"]
[ext_resource type="PackedScene" path="res://Pop.tscn" id="2"]
[ext_resource type="FontFile" uid="uid://c880ppsw4aehw" path="res://DroidSerif-WmoY.ttf" id="3"]
[ext_resource type="PackedScene" path="res://Back Ground.tscn" id="4"]

[node name="Level1" type="Node2D"]
script = ExtResource("1")

[node name="Pop" parent="." instance=ExtResource("2")]
position = Vector2(-5, 900)

[node name="Spawn1" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Spawn2" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Lives" type="RichTextLabel" parent="."]
offset_left = 71.0
offset_top = 104.0
offset_right = 230.0
offset_bottom = 165.0
theme_override_fonts/normal_font = ExtResource("3")
theme_override_font_sizes/normal_font_size = 26
text = "Lives:"

[node name="Label" type="Label" parent="."]
offset_left = 149.0
offset_top = 104.0
offset_right = 428.0
offset_bottom = 163.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 26

[node name="Level_Timer" type="Timer" parent="."]
wait_time = 50.0
one_shot = true
autostart = true

[node name="Time_Left" type="RichTextLabel" parent="."]
offset_left = 66.0
offset_top = 164.0
offset_right = 330.0
offset_bottom = 228.0
theme_override_fonts/normal_font = ExtResource("3")
theme_override_font_sizes/normal_font_size = 26
text = "Time Left:"

[node name="Level_Time" type="Label" parent="."]
offset_left = 194.0
offset_top = 163.0
offset_right = 471.0
offset_bottom = 222.0
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 26

[node name="Back_Ground" parent="." instance=ExtResource("4")]
visible = false

[connection signal="timeout" from="Spawn1" to="." method="_on_Spawn1"]
[connection signal="timeout" from="Spawn2" to="." method="_on_Spawn2_timeout"]
[connection signal="timeout" from="Level_Timer" to="." method="_time_up"]
